style: improve Filter bar styling, fix filter bar to be visible mobile and filters mobile padding remove.

--- a/src/components/FilterBar/FilterBar.module.scss
+++ b/src/components/FilterBar/FilterBar.module.scss
@@ -13,6 +13,7 @@
   padding: 0.75rem 1rem;
 
   border-radius: 1rem;
+  border-color: white;
   background: #ffffff;
   color: #374151;
   cursor: pointer;
@@ -75,15 +76,6 @@
   overflow-wrap: break-word;
 }
 
-@media (max-width: 640px) {
-  .content {
-    position: fixed;
-    left: 1rem;
-    right: 1rem;
-    width: auto;
-    max-width: none;
-  }
-}
 
 .placeholderGrid {
   display: grid;
