--- a/src/pages/ProjectPage/ProjectsPage.module.scss
+++ b/src/pages/ProjectPage/ProjectsPage.module.scss
@@ -226,10 +226,6 @@
     flex-wrap: wrap;
   }
 
-  .filters {
-    padding: 1rem;
-  }
-
   .checkboxGrid {
     grid-template-columns: 1fr;
   }
